# cpp-stuff

./: README.md
examples/: raw.cpp  raw.hpp  raw_compile.script  rawvector.cpp  rawvector.hpp  rawvector_compile.script
examples/conan-package-manager/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
examples/epsilon/: CMakeLists.txt  CMakeLists.txt.btest  CMakeLists.txt.catch2  CMakeLists.txt.gtest  Makefile  README.md  compile_script.sh  conanfile.txt  epsilon.cpp  epsilon.h  main.cpp  main_btest.cpp  main_catch2.cpp  main_gtest.cpp
examples/game_of_life/: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Makefile  README.md  gdb.md  main.cpp  main_gtest.cpp
examples/rawvector/: rawvector.cpp  rawvector.hpp
opencv/: 1_red.compile  1_red.cpp  2_gray.compile  2_gray.cpp  3_gray16.compile  3_gray16.cpp
sdl-examples/: README.md  hello.compile  hello.cpp
wx/wx_cmake/: CMakeLists.txt  README.md
wx/wx_cmake/include/: SimpleApp.h  SimpleMenuBar.h
wx/wx_cmake/src/: CMakeLists.txt  SimpleApp.cpp  SimpleFrame.cpp  main.cpp
wx/wx_cmake_menubar/: text.txt
wx/wx_cmake_menubar/app/: CMakeLists.txt
wx/wx_cmake_menubar/include/: SimpleFrame.h
wx/wx_cmake_menubar/src/: SimpleApp.cpp  SimpleMenuBar.cpp
wx/wx_cmake_simple/: CMakeLists.txt  README.md  main.cpp
wx/wx_cmake_toolbar/src/: CMakeLists.txt  SimpleFrame.cpp  SimpleToolBarApp.cpp  SimpleToolBarApp.h  SimpleToolBarCompile.script  SimpleToolBarFrame.cpp  SimpleToolBarFrame.h  SimpleToolBarMain.cpp
wx/wx_example/: README.md
wx/wx_example/src/: SimpleFrame.cpp  (+11 more)
wx/wx_simple/: README.md  compile.script
xtensor/: README.md  compile_and_run1  compile_and_run_dot_benchmark.cpp  dot_benchmark.cpp  run1  xtensor1.cpp
