cmake_minimum_required(VERSION 3.16.3)
set(CMAKE_CXX_STANDARD 14)
project (gol)
add_executable(gol main.cpp Board.cpp Cell.cpp)
add_executable(gol_gtest main_gtest.cpp Board.cpp Cell.cpp)
find_package(GTest REQUIRED)
target_link_libraries(gol_gtest GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(gol_gtest)

